# scale-network

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  CI.md  CONTRIBUTING.md  LICENSE  MAPS.md  Makefile  README.md  RELEASE.md  flake.nix  helloworld.sh  requirements.txt  shell.nix
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue_template.yaml
.github/workflows/: ansible-test.yml  ci-nixos.yml  (+7 more)
.kermit/: README.md  bhyve.kermit  juniper.kermit
ansible/: LibInventory.pm  README.md  Vagrantfile  ansible.cfg  inventory.py  scale.yml  test_inventory.py  todo
docs/: gitlab-ci.md  scale-router-hw-bios.md
facts/: datasource.py  inventory.py  test_datasources.py  test_duplicates.fish  test_inventory.py  test_uniqueness.py  uniqueness.py
junos/: manager.py  test.conf
maps/: readme.md
monitoring/: map-setup  openwrt_dashboard.json  overall_ap_status_dashboard.json  zabbix_server.conf
nix/: README.md  flake-module.nix
nix/package-sets/top-level/scale-network/massflash-generate-persist/src/: massflash_generate_persist.py  pyproject.toml
openwrt/: .dockerignore  AR71XX.md  Dockerfile  Makefile  README.md  TPLINK.md  autoflash  diffconfig  feeds.conf.default  flash  ping
pi/: README.md  gold_image.txt
router_configuration_backups/: br-mdf-01  cf-mdf-01  ex-mdf-01
switch-configuration/: .gitignore  MANUAL_SWITCH_SETUP.txt  Makefile  README.md  todo
tests/: README.md
utilities/: dhcpd2kea_subnets.pl
venue-diagrams/: Zpasadena-cc-exp_GES.dwg  pasadena-cc-lower and upper level_GES.dwg
(+631 files in other folders)
